--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -412,12 +412,12 @@
   };
 
   const tokkouImageMap = {
-    red: "images/tokkou_50_red.png",
-    blue: "images/tokkou_50_blue.png",
-    yellow: "images/tokkou_50_yellow.png",
-    green: "images/tokkou_50_green.png",
-    purple: "images/tokkou_50_purple.png",
-    white: "images/tokkou_50_white.png"
+    '赤+50': "images/tokkou_50_red.png",
+    '青+50': "images/tokkou_50_blue.png",
+    '黄+50': "images/tokkou_50_yellow.png",
+    '緑+50': "images/tokkou_50_green.png",
+    '紫+50': "images/tokkou_50_purple.png",
+    '白+50': "images/tokkou_50_white.png"
   };
 
   function renderSkills(skills) {
