--- a/index.html
+++ b/index.html
@@ -505,19 +505,20 @@
           const container = document.createElement("div");
           container.style.display = "flex";
           container.style.flexWrap = "wrap";
-          container.style.gap = "12px";
-          container.style.justifyContent = "center";
-          container.style.padding = "8px";
+          container.style.justifyContent = "flex-start";
+          container.style.gap = "8px";
+          container.style.padding = "0";
+          container.style.margin = "0";
 
           sortedCards.forEach(card => {
             const box = document.createElement("div");
-            box.style.flex = "1 1 160px";
-            box.style.maxWidth = "24%"; // ← 横4枚並びしやすくなる
-            box.style.minWidth = "140px";
+            box.style.flex = "0 0 auto";
+            box.style.width = "calc(25% - 8px)";
+            box.style.minWidth = "120px"; // 👈 これでスマホ4枚並びに近づく
             box.style.boxSizing = "border-box";
             box.style.border = "1px solid #ccc";
-            box.style.borderRadius = "8px";
-            box.style.padding = "8px";
+            box.style.borderRadius = "6px";
+            box.style.padding = "6px";
             box.style.background = document.body.classList.contains("dark") ? "#333" : "#fff";
 
             const img = document.createElement("img");
@@ -529,7 +530,7 @@
             img.onclick = () => showImageModal(card.image);
 
             const info = document.createElement("div");
-            info.style.marginTop = "8px";
+            info.style.marginTop = "6px";
             info.innerHTML = `
               <div style="font-weight:bold;">${card.name}</div>
               <div style="font-size:13px;">📄 ${card.id}</div>
