add: previewarea div

--- a/index.html
+++ b/index.html
@@ -198,6 +198,13 @@
       color: #eee;
       border-color: #666;
     }
+
+    @media screen and (max-width: 480px) {
+      #cardPreviewArea div {
+        width: calc(25% - 8px) !important;
+        min-width: 100px !important;
+      }
+    }
   </style>
 </head>
 <body>
