--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
           sortedCards.forEach(card => {
             const box = document.createElement("div");
             box.style.flex = "0 0 auto";
-            box.style.width = "calc(25% - 8px)";
+            // box.style.width = "calc(25% - 8px)";
             box.style.minWidth = "120px"; // 👈 これでスマホ4枚並びに近づく
             box.style.boxSizing = "border-box";
             box.style.border = "1px solid #ccc";
