--- a/index.html
+++ b/index.html
@@ -505,21 +505,17 @@
           const container = document.createElement("div");
           container.style.display = "flex";
           container.style.flexWrap = "wrap";
+          container.style.gap = "12px";
           container.style.justifyContent = "flex-start";
-          container.style.gap = "8px";
-          container.style.padding = "0";
-          container.style.margin = "0";
+          container.style.padding = "8px";
 
           sortedCards.forEach(card => {
             const box = document.createElement("div");
-            box.style.flex = "0 0 auto";
-            // box.style.width = "calc(25% - 8px)";
-            box.style.maxWidth = "24%"; // ← 横4枚並びしやすくなる
-            box.style.minWidth = "120px"; // 👈 これでスマホ4枚並びに近づく
-            box.style.boxSizing = "border-box";
+            box.style.flex = "1 1 160px";         // ← 最小160px、広い画面ならもっと並ぶ
+            box.style.boxSizing = "border-box";  // ← padding込みのサイズ
             box.style.border = "1px solid #ccc";
-            box.style.borderRadius = "6px";
-            box.style.padding = "6px";
+            box.style.borderRadius = "8px";
+            box.style.padding = "8px";
             box.style.background = document.body.classList.contains("dark") ? "#333" : "#fff";
 
             const img = document.createElement("img");
@@ -531,7 +527,7 @@
             img.onclick = () => showImageModal(card.image);
 
             const info = document.createElement("div");
-            info.style.marginTop = "6px";
+            info.style.marginTop = "8px";
             info.innerHTML = `
               <div style="font-weight:bold;">${card.name}</div>
               <div style="font-size:13px;">📄 ${card.id}</div>
