--- a/index.html
+++ b/index.html
@@ -511,11 +511,13 @@
 
           sortedCards.forEach(card => {
             const box = document.createElement("div");
-            box.style.flex = "1 1 160px";         // ← 最小160px、広い画面ならもっと並ぶ
-            box.style.boxSizing = "border-box";  // ← padding込みのサイズ
+            box.style.flex = "0 0 auto";
+            box.style.width = "72px";               // ← 画像サイズ+枠の最適化
+            box.style.boxSizing = "border-box";
+            box.style.margin = "2px";
+            box.style.padding = "2px";
             box.style.border = "1px solid #ccc";
-            box.style.borderRadius = "8px";
-            box.style.padding = "8px";
+            box.style.borderRadius = "6px";
             box.style.background = document.body.classList.contains("dark") ? "#333" : "#fff";
 
             const img = document.createElement("img");
