--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
           sortedCards.forEach(card => {
             const box = document.createElement("div");
             box.style.flex = "0 0 auto";
-            box.style.width = "72px";               // ← 画像サイズ+枠の最適化
+            box.style.width = "72px";
             box.style.boxSizing = "border-box";
             box.style.margin = "2px";
             box.style.padding = "2px";
