--- a/index.html
+++ b/index.html
@@ -346,7 +346,8 @@
     
       function toggleFilters() {
         const el = document.getElementById("filtersWrapper");
-        el.style.display = el.style.display === "none" ? "block" : "none";
+        const isHidden = window.getComputedStyle(el).display === "none";
+        el.style.display = isHidden ? "block" : "none";
       }
     
       function toggleDarkMode() {
