--- a/index.html
+++ b/index.html
@@ -221,6 +221,19 @@
       font-size: 17px;
       margin-bottom: 6px;
     }
+
+    /* ✅ スマホレイアウト用にフィルター中身の文字サイズを調整 */
+    .mobile-layout .filter-group label,
+    .mobile-layout .filter-row label,
+    .mobile-layout .filter-group select,
+    .mobile-layout .filter-group button {
+      font-size: 13px;
+      line-height: 1.4;
+    }
+
+    .mobile-layout .filter-group legend {
+      font-size: 13.5px;
+    }
   </style>
 </head>
 <body>
