--- a/deck_builder.html
+++ b/deck_builder.html
@@ -202,6 +202,7 @@
 </head>
 <body>
     <div class="deck-header">
+      <button onclick="history.back()">← 前のページへ</button>
       <h2>🧠 デッキビルダー</h2>
       <div class="deck-controls">
         <button onclick="toggleDarkMode()" style="margin-bottom: 10px;">
