--- a/deck_builder.html
+++ b/deck_builder.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>デッキビルダー</title>
   <style>
+    html, body {
+        touch-action: manipulation;
+    }
+
     body {
       font-family: sans-serif;
       margin: 0;
